sort.basic.cocktail.AlgCocktailSort2.scala.error
Compilation error:
AlgCocktailSort2:28: error: not found: value n
       if(c==n-2){
             ^