sort.basic.cocktail.AlgCocktailSort2.scala.code
def cocktailSort2() {

  var fin=0
  var k=0
  var c=0
  var debut=0
  fin= getNombreValeurs()
  
 	 while(true){
     
   	 c=0
   	 for(k<- debut to fin){
   	   if(plusPetit(k+1,k)){
    	    echange(k,k+1)
    	  }
       
     	 }
       fin-=1
     
     for(k<- fin to debut by -1){
   	   if(plusPetit(k+1,k)){
    	    echange(k,k+1)
    	  }else{
     	   c=c+1
     	 }
       
       if(c==n-2){
         return
       }
     	 }
     debut+=1
   	 
 	 }
}